fixed stying & reorganized some out of place css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,8 +146,8 @@ input {
   background-color: white;
   width: 50px;
   height: 50px;
-  padding: 10px 16px;
-  font-size: 25px;
+  padding: 10px 20px;
+  font-size: 20px;
   line-height: 1.33;
   border-radius: 25px;
 }
